--- a/Quiz.css
+++ b/Quiz.css
@@ -1,5 +1,40 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans:300,600);
 
+nav {
+    width: 100%;
+    height: 50px;
+    background-color:#279; 
+    margin-bottom: 20px
+}
+ul{
+    margin-left: -50px;
+    
+}
+
+ul li {
+    list-style: none;
+    display: inline-block;
+    float: left;
+    line-height: 50px
+}
+
+ul li a {
+    display: block;
+    text-decoration: none;
+    font-size: 22px;
+    font-family: 'Work Sans', sans-serif;
+    color: #fff;
+    font-weight: 400;
+    padding: 0 20px;
+
+}
+
+ul li a:hover {
+    color: red;
+}
+
+
+
 body{
 	font-size: 20px;
 	font-family: 'Work Sans', sans-serif;
@@ -28,4 +63,4 @@ body{
 }
 #submit:hover{
 	background-color: #38a;
-}
+} 
