--- a/Quiz.css
+++ b/Quiz.css
@@ -3,33 +3,59 @@
 body{
 	font-size: 20px;
 	font-family: 'Work Sans', sans-serif;
-	color: #333;
-  font-weight: 300;
-  text-align: center;
-  background-color: #f8f6f0;
+  color: #333;
+  background-image: url("healthy-lifestyle-seamless-background-vector.jpg");
+    /* background-color: bisque; */
+  
 }
-h1{
-  font-weight: 300;
-  margin: 0px;
+#flex{
+  margin: auto;
+  padding: 40px 40px 40px 00px;
+  display: flex;
+  /* border: 5px solid black; */
+  /* width: 80%; */
+}
+#about{
+  padding-right: 00px;
+  border: 4px ridge black;
+  background-Color:   white;
+  /* display: flex; */
+  width: 10%;
+  height: 350px;
+}
+#title{
+  background-color: #00ffb0;
+  border: 3px outset black;
+  padding: 1px ;
+  /* display: flex; */
+}
+header{
+  background-color: #00ffb0;
+}
+header:hover{
+  background-color: #ff0a00;
+}
+#head{
+  margin: auto;
+  border: 10px groove black;
   padding: 10px;
-  font-size: 20px;
-  background-color: #444;
-  color: #fff;
+  text-align: center;
+  width: 80%;
+  /* background-color: #00ffb0; */
+  font-style: oblique;
+  font-size: 40px;
+  /* display: none; */
 }
 .question{
-  font-size: 30px;
-  margin-bottom: 10px;
+  font-weight: 600;
 }
 .answers {
   margin-bottom: 20px;
-  text-align: left;
-  display: inline-block;
 }
 .answers label{
   display: block;
-  margin-bottom: 10px;
 }
-button{
+#submit{
   font-family: 'Work Sans', sans-serif;
 	font-size: 22px;
 	background-color: #279;
@@ -40,29 +66,6 @@ button{
 	cursor: pointer;
 	margin-bottom: 20px;
 }
-button:hover{
+#submit:hover{
 	background-color: #38a;
-}
-
-
-
-
-
-.slide{
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  z-index: 1;
-  opacity: 0;
-  transition: opacity 0.5s;
-}
-.active-slide{
-  opacity: 1;
-  z-index: 2;
-}
-.quiz-container{
-  position: relative;
-  height: 200px;
-  margin-top: 40px;
 }
