--- a/Quiz.css
+++ b/Quiz.css
@@ -4,18 +4,32 @@ body{
 	font-size: 20px;
 	font-family: 'Work Sans', sans-serif;
 	color: #333;
-  
+  font-weight: 300;
+  text-align: center;
+  background-color: #f8f6f0;
+}
+h1{
+  font-weight: 300;
+  margin: 0px;
+  padding: 10px;
+  font-size: 20px;
+  background-color: #444;
+  color: #fff;
 }
 .question{
-  font-weight: 600;
+  font-size: 30px;
+  margin-bottom: 10px;
 }
 .answers {
   margin-bottom: 20px;
+  text-align: left;
+  display: inline-block;
 }
 .answers label{
   display: block;
+  margin-bottom: 10px;
 }
-#submit{
+button{
   font-family: 'Work Sans', sans-serif;
 	font-size: 22px;
 	background-color: #279;
@@ -26,6 +40,29 @@ body{
 	cursor: pointer;
 	margin-bottom: 20px;
 }
-#submit:hover{
+button:hover{
 	background-color: #38a;
+}
+
+
+
+
+
+.slide{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.active-slide{
+  opacity: 1;
+  z-index: 2;
+}
+.quiz-container{
+  position: relative;
+  height: 200px;
+  margin-top: 40px;
 }
